# api_for_books_library

./: README.md  auth_data.json  pyproject.toml
config/: settings.py  urls.py
users/: models.py  permissions.py  urls.py  views.py
users/migrations/: 0001_initial.py
